--- a/src/TP_MMC/rapport.tex
+++ b/src/TP_MMC/rapport.tex
@@ -269,8 +269,8 @@ le même profil énergétique afin de d'isoler l'impact de la température. Dans
   \end{minipage}
 \end{figure}
 
-On remarque que plus la température augmente plus il est compliqué pour la simulation d'atteindre les extremums d'énergie, ce qui relativement logique
-compte tenu du modèle d'exclusion du critère de Metropolis.
+On remarque que plus la température augmente plus il est compliqué pour la simulation d'atteindre les extremums d'énergie, ce qui est 
+relativement logique compte tenu du modèle d'exclusion du critère de Metropolis.
 
 \chapter{Discussion}
 
